[gd_scene load_steps=7 format=2]

[ext_resource path="res://_resources/fonts/BankGothic Md BT.ttf" type="FontFile" id=1]
[ext_resource path="res://_resources/scene_deck_building/deck_box.png" type="Texture2D" id=2]
[ext_resource path="res://_scripts/deck_slot.gd" type="Script" id=3]

[sub_resource type="FontFile" id=18]
size = 24
outline_size = 2
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=19]
size = 24
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=20]
size = 24
outline_size = 2
font_data = ExtResource( 1 )

[node name="deck_slot" type="Button"]
offset_left = 642.0
offset_top = 52.0
offset_right = 749.0
offset_bottom = 130.0
custom_minimum_size = Vector2( 107, 78 )
pivot_offset = Vector2( 39, 39 )
focus_mode = 0
focus_mode = 0
flat = true
script = ExtResource( 3 )

[node name="deck_box" type="Sprite2D" parent="."]
position = Vector2( 52, 38 )
texture = ExtResource( 2 )

[node name="deck_name" type="Label" parent="."]
offset_left = -1.0
offset_top = 46.0
offset_right = 106.0
offset_bottom = 72.0
custom_minimum_size = Vector2( 107, 26 )
mouse_filter = 1
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource( 18 )
text = "Elmnt"
align = 1
clip_text = true

[node name="delete" type="Button" parent="."]
offset_left = 73.0
offset_right = 100.0
offset_bottom = 30.0
focus_mode = 0
focus_mode = 0
flat = true

[node name="X" type="Label" parent="delete"]
offset_right = 24.0
offset_bottom = 26.0
mouse_filter = 1
theme_override_colors/font_outline_color = Color( 0.886275, 0, 0, 1 )
theme_override_colors/font_shadow_color = Color( 0.886275, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource( 19 )
text = "X"
align = 1
clip_text = true

[node name="edit_deckbox" type="Button" parent="."]
visible = false
offset_left = 10.0
offset_top = -1.0
offset_right = 37.0
offset_bottom = 29.0
pivot_offset = Vector2( 13, 15 )
focus_mode = 0
focus_mode = 0
flat = true

[node name="O" type="Label" parent="edit_deckbox"]
offset_right = 24.0
offset_bottom = 26.0
mouse_filter = 1
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource( 20 )
text = "[]"
align = 1
clip_text = true

[node name="box_tween" type="Tween" parent="."]

[connection signal="button_up" from="." to="." method="_on_deck_slot_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_deck_slot_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_deck_slot_mouse_exited"]
[connection signal="button_up" from="delete" to="." method="_on_delete_button_up"]
[connection signal="button_up" from="edit_deckbox" to="." method="_on_edit_deckbox_button_up"]
